# desafio_python

./: .env  .env.example  .gitignore  Dockerfile  Makefile  README.md  alembic.ini  docker-compose.yml  index.py  kaggle.json  part1.py  part2.py  part3.py  pyproject.toml  requirements.txt
Data_Manipulation/: main.py
Data_Transformation/: main.py
Data_Visualization/: main.py
migrations/: alembic.ini  alembic.py  main.py
migrations/migrations/versions/: 2c540606d300_princial_table.py  32853ba357f0_insights_table.py  86cdf44a8d6b_view_for_part2.py
migrations/versions/: 3f2faf536fc0_add_uuid_extension.py  94d2bd02a24a_create_flight_insights_table.py  9c1cbfdff044_create_flight_raw_table.py
src/app/extract/: extractor.py
src/app/load/: loader.py
src/app/models/: flight_insight.py
src/app/sanitize/: sanitizer.py
src/app/transform/: transform.py
src/app/visualization/: visualize.py
src/common/: config.py  const.py  thread.py
src/model/: dalay_cancellationMigration.py  flightMigration.py  usersInsightsMigration.py
src/part1/: README.MD  download_dadaset.py  popule_database.py
src/part2/: insigths.py
src/services/: kaggle.py  postgres.py
src/utils/: getEnvironment.py
