[tool.poetry]
name = "poetry start"
version = "0.1.0"
description = "Projeto desenvolvido por DS para desafio de Python."
authors = ["ds-challange <d@vidson.email>"]
license = "MIT"

[tool.poetry.dependencies]
python = "3.11.10"
kaggle = "^1.6.17"
beanie = "^1.27.0"
seaborn = "^0.13.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
